# genie-api

./: .cursorrules  .gitignore  README.md  alembic.ini  clientLibraryConfig-aws-provider.json  docker-compose.yaml  gunicorn_conf.py  init_db.py  pyproject.toml  test_recommendations.py
alembic/: README.md  env.py
alembic/versions/: 1ffe75d3b40a_for_friends.py  2c96784b3c2d_initial_migration.py  4038d2c387ec_added_is_seen.py  408deb13f588_change_content_column_to_text_in_llm_.py  450e268c701c_add_recommendations_models.py  4b2a540804a8_add_is_from_genie_column_to_private_.py  4ba7f6c83c8f_add_location_model.py  58258a79f194_add_msg_table_and_messagestatus_enum_to_.py  58c708d15df6_add_llm_chat_session_and_message_tables.py  5d142413ab4b_for_friends.py  93fad7f87d2c_add_message_tables.py  9602979b5113_convert_array_columns_to_jsonb_with_.py  9d80d8662b2d_update_userrecommendation_created_at_.py  a072d5284147_.py  ac08f5eb8b7b_add_postgis_and_spatial_column_to_.py  acd891bab6c1_add_resource_details_to_recommendations_.py  c345850e424c_rename_metadata_to_message_meta_in_.py  c778d31e12d8_initial_migration.py  d241e3f732e4_merge_heads.py  e20049aa84ff_increase_length_of_imageurl_field_on_.py  e55cc7ce8809_add_private_chat_messages_table.py  e98db86d0001_add_keywords_and_archetypes_to_user_.py  (+1 more)
app/: common.py  config.py  database.py  googlePlaces_endpoints.py  google_places_endpoints.py  identity_credentials.py  init_db.py  main.py  secrets_manager.py  tripAdvisor_endpoints.py  trip_advisor_endpoints.py
app/dependencies/: mem0.py
app/models/: User.py  (+12 more)
migrations/: env.py
scripts/: deploy
(+74 files in other folders)
