[project]
name = "genie-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.37.8",
    "fastapi[standard]>=0.115.11",
    "google-genai>=1.4.0",
    "openai>=1.65.4",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
]
