[project]
name = "genie-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asyncpg>=0.30.0",
    "boto3>=1.37.8",
    "fastapi[standard]>=0.115.11",
    "openai>=1.65.4",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.0.1",
    "python-jose>=3.4.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
]
