[project]
name = "genie-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "boto3>=1.37.8",
    "exa-py>=1.11.0",
    "fastapi>=0.115.11",
    "firebase-admin>=6.7.0",
    "google-auth>=2.38.0",
    "gunicorn>=23.0.0",
    "openai>=1.65.4",
    "psycopg2>=2.9.10",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "python-jose>=3.4.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.39",
    "tavily-python>=0.5.4",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "fastapi[standard]",
    "python-dotenv>=1.0.1",
]
